# aidfa-backend

./: .env  .gitignore  README.md  auth.py  bigquery.py  firebase.py  main.py  model.py  pyproject.toml  requirements.txt  transactions.py
.github/workflows/: build.yaml
