[project]
name = "aidfa-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.103.1",
    "firebase-admin==6.2.0",
    "google-cloud-aiplatform==1.36.0",
    "google-generativeai==0.1.0",
    "python-dotenv==1.0.0",
    "python-multipart>=0.0.20",
    "uvicorn==0.23.2",
]
